@@ -102,7 +102,10 @@ public class TrackYourAppealJsonBuilder {
 
             List<String> withDwpStates = Arrays.asList("appealCreated", "validAppeal", "withDwp");
 
-            List<String> dwpRespondStates = Arrays.asList("readyToList", "responseReceived", NOT_LISTABLE);
+            List<String> dwpRespondStates = new ArrayList<>(List.of("readyToList", "responseReceived", NOT_LISTABLE));
+            if (getHearingType(caseData).equals(PAPER)) {
+                dwpRespondStates.addAll(List.of("hearing", "outcome"));
+            }
 
             List<String> hearingStates = Arrays.asList("hearing", "outcome");
 
@@ -123,7 +126,9 @@ public class TrackYourAppealJsonBuilder {
                 caseNode.put("status", "CLOSED");
             }
 
-            caseNode.put("hideHearing", hearingAdjourned || NOT_LISTABLE.equalsIgnoreCase(state));
+            caseNode.put("hideHearing", hearingAdjourned
+                    || NOT_LISTABLE.equalsIgnoreCase(state)
+                    || HearingType.PAPER.getValue().equalsIgnoreCase(caseData.getAppeal().getHearingType()));
 
             ArrayNode outcomeNode = getHearingOutcome(caseData.getSscsDocument());
             if (!outcomeNode.isEmpty()) {
@@ -199,7 +204,7 @@ public class TrackYourAppealJsonBuilder {
     }
 
     private boolean isHearingAdjourned(Map<Event, Hearing> eventHearingMap) {
-        List<Hearing> hearing = new ArrayList(eventHearingMap.values());
+        List<Hearing> hearing = new ArrayList<>(eventHearingMap.values());
         hearing.sort(Comparator.reverseOrder());
         return !hearing.isEmpty() && YES.equalsIgnoreCase(hearing.get(0).getValue().getAdjourned());
     }
